--- a/blank.html
+++ b/blank.html
@@ -65,7 +65,7 @@
 
     <section class="section-main py-5 px-2">
         <div class="row">
-            <div class="col-12 col-lg-2 flex-sm-row overflow-auto">
+            <div class="col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
                     <a href="dashboad.html"
                         class="list-group-item text-center py-4 my-3 list-group-item-action">Dashboard</a>
@@ -88,7 +88,7 @@
     <footer class="section-footer pt-5">
         <!-- <h1>Footer</h1> -->
         <div class="container my-5">
-            <div class="row">
+            <div class="row  px-3">
                 <div class="col-12 col-md-12 col-lg-4 footer-links footer-img">
                     <img src="assets/images/logo.png" alt="Ninjaz logo" class="img-fluid w-75">
                 </div>
