--- a/services.html
+++ b/services.html
@@ -64,8 +64,8 @@
     </section>
 
     <section class="section-main py-5 px-2">
-        <div class="row">
-            <div class="col-12 col-lg-2 flex-sm-row overflow-auto">
+        <div class="row px-3">
+            <div class="col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
                     <a href="dashboad.html"
                         class="list-group-item text-center py-4 my-3 list-group-item-action">Dashboard</a>
@@ -91,8 +91,10 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold">Easy Mode</a>
-                                <a href="multistepmode.html" class="card-link btn btn-outline-gold">Advanced
+                                <a href="onestepmode.html"
+                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="multistepmode.html"
+                                    class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
                         </div>
                     </div>
@@ -103,8 +105,10 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold">Easy Mode</a>
-                                <a href="multistepmode.html" class="card-link btn btn-outline-gold">Advanced
+                                <a href="onestepmode.html"
+                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="multistepmode.html"
+                                    class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
                         </div>
                     </div>
@@ -115,8 +119,10 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold">Easy Mode</a>
-                                <a href="multistepmode.html" class="card-link btn btn-outline-gold">Advanced
+                                <a href="onestepmode.html"
+                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="multistepmode.html"
+                                    class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
                         </div>
                     </div>
@@ -127,8 +133,10 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold">Easy Mode</a>
-                                <a href="multistepmode.html" class="card-link btn btn-outline-gold">Advanced
+                                <a href="onestepmode.html"
+                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="multistepmode.html"
+                                    class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
                         </div>
                     </div>
@@ -139,8 +147,10 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold">Easy Mode</a>
-                                <a href="multistepmode.html" class="card-link btn btn-outline-gold">Advanced
+                                <a href="onestepmode.html"
+                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="multistepmode.html"
+                                    class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
                         </div>
                     </div>
@@ -151,8 +161,10 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold">Easy Mode</a>
-                                <a href="multistepmode.html" class="card-link btn btn-outline-gold">Advanced
+                                <a href="onestepmode.html"
+                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="multistepmode.html"
+                                    class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
                         </div>
                     </div>
@@ -163,8 +175,10 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold">Easy Mode</a>
-                                <a href="multistepmode.html" class="card-link btn btn-outline-gold">Advanced
+                                <a href="onestepmode.html"
+                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="multistepmode.html"
+                                    class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
                         </div>
                     </div>
@@ -175,8 +189,10 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold">Easy Mode</a>
-                                <a href="multistepmode.html" class="card-link btn btn-outline-gold">Advanced
+                                <a href="onestepmode.html"
+                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="multistepmode.html"
+                                    class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
                         </div>
                     </div>
@@ -190,7 +206,7 @@
                                 <h5 class="card-title font-weight-bold">Pro</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -201,7 +217,7 @@
                                 <h5 class="card-title font-weight-bold">Company Setup and Formation</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -213,7 +229,7 @@
                                     Trademark</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -224,7 +240,7 @@
                                 <h5 class="card-title font-weight-bold">Product Registration</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -235,7 +251,7 @@
                                 <h5 class="card-title font-weight-bold">Other</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -253,7 +269,7 @@
                                 <h5 class="card-title font-weight-bold">Commercial and Corporate low</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -265,7 +281,7 @@
                                 <h5 class="card-title font-weight-bold">Company incorporation</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -277,7 +293,7 @@
                                 <h5 class="card-title font-weight-bold">Dispute resolution</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -289,7 +305,7 @@
                                 <h5 class="card-title font-weight-bold">Immigration and citizenship</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -301,7 +317,7 @@
                                 <h5 class="card-title font-weight-bold">Intellectual property low</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -313,7 +329,7 @@
                                 <h5 class="card-title font-weight-bold">Real estate and property low</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -325,7 +341,7 @@
                                 <h5 class="card-title font-weight-bold">Arbitration low</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -337,7 +353,7 @@
                                 <h5 class="card-title font-weight-bold">Other</h5>
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
-                                <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                     Mode</a>
                             </div>
                         </div>
@@ -355,7 +371,7 @@
                                         <h5 class="card-title font-weight-bold">ssssssssssss</h5>
                                     </div>
                                     <div class="card-footer pt-0 bg-white border-0">
-                                        <a href="onestepmode.html" class="card-link btn nz-btn-gold btn-block">Easy
+                                        <a href="onestepmode.html" class="  btn nz-btn-gold btn-block">Easy
                                             Mode</a>
                                     </div>
                                 </div>
