--- a/onestepmode.html
+++ b/onestepmode.html
@@ -64,8 +64,8 @@
     </section>
 
     <section class="section-main py-5 px-2">
-        <div class="row">
-            <div class="col-12 col-lg-2 flex-sm-row overflow-auto">
+        <div class="row px-3">
+            <div class="col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
                     <a href="dashboad.html"
                         class="list-group-item text-center py-4 my-3 list-group-item-action">Dashboard</a>
@@ -80,41 +80,23 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-3">
-                <div class="tab-content" id="v-pills-tabContent">
-                    <div class="tab-pane fade" id="v-pills-dashboard" role="tabpanel"
-                        aria-labelledby="v-pills-dashboard-tab">
-
+                <h1 class="section-title-side"><span>Translation - <span class="font-weight-light">Easy
+                            Mode</span></h1>
+                <form>
+                    <div class="form-group">
+                        <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="customFile">
+                            <label class="custom-file-label" for="customFile">Choose file</label>
+                        </div>
                     </div>
-                    <div class="tab-pane fade show active" id="v-pills-services" role="tabpanel"
-                        aria-labelledby="v-pills-services-tab">
-                        <h1 class="section-title-side"><span>Translation - <span class="font-weight-light">Easy
-                                    Mode</span></h1>
-                        <form>
-                            <div class="form-group">
-                                <div class="custom-file">
-                                    <input type="file" class="custom-file-input" id="customFile">
-                                    <label class="custom-file-label" for="customFile">Choose file</label>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="exampleFormControlTextarea1">Special Instructions </label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                            </div>
-                            <a href="/placeOrderSuccess.html"
-                                class="btn nz-btn-gold text-uppercase font-weight-bold">Place
-                                Order</a>
-                        </form>
-
+                    <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Special Instructions </label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
-                    <div class="tab-pane fade" id="v-pills-orders" role="tabpanel" aria-labelledby="v-pills-orders-tab">
-                        orders</div>
-                    <div class="tab-pane fade" id="v-pills-finaice" role="tabpanel"
-                        aria-labelledby="v-pills-finaice-tab">
-                        finaice</div>
-                    <div class="tab-pane fade" id="v-pills-account" role="tabpanel"
-                        aria-labelledby="v-pills-account-tab">
-                        account</div>
-                </div>
+                    <a href="/placeOrderSuccess.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Place
+                        Order</a>
+                </form>
+
             </div>
         </div>
     </section>
