--- a/orders.html
+++ b/orders.html
@@ -64,8 +64,8 @@
     </section>
 
     <section class="section-main py-5 px-2">
-        <div class="row">
-            <div class="col-12 col-lg-2 flex-sm-row overflow-auto">
+        <div class="row px-3">
+            <div class="col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
                     <a href="dashboad.html"
                         class="list-group-item text-center py-4 my-3 list-group-item-action">Dashboard</a>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-3">
-                <h1 class="section-title-side"><span>Place order now</span></h1>
+                <h1 class="section-title-side"><span>Orders List</span></h1>
             </div>
         </div>
     </section>
