--- a/dashboad.html
+++ b/dashboad.html
@@ -68,7 +68,7 @@
             <div class="col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
                     <a href="dashboad.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action active">Dashboard</a>
+                        class="list-group-item text-center py-4 my-3 list-group-item-action active"><i class="far fa-star fa-3x d-block mb-2"></i>Dashboard</a>
                     <a href="services.html"
                         class="list-group-item text-center py-4 my-3 list-group-item-action">Services</a>
                     <a href="orders.html"
