--- a/blank.html
+++ b/blank.html
@@ -67,20 +67,34 @@
         <div class="row">
             <div class="col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
-                    <a href="dashboad.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Dashboard</a>
-                    <a href="services.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action active">Services</a>
-                    <a href="orders.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Orders</a>
-                    <a href="finance.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Finaice</a>
-                    <a href="account.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Account</a>
+                    <a href="dashboad.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="far fa-star fa-3x d-block mb-2"></i>
+                        Dashboard
+                    </a>
+                    <a href="services.html" class="list-group-item text-center p-4 my-3 list-group-item-action active">
+                        <i class="fas fa-briefcase fa-3x d-block mb-2"></i>
+                        Services
+                    </a>
+                    <a href="orders.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="fas fa-shopping-cart fa-3x d-block mb-2"></i>
+                        Orders
+                    </a>
+                    <a href="finance.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="fas fa-coins fa-3x d-block mb-2"></i>
+                        Finaice
+                    </a>
+                    <a href="account.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="far fa-address-card fa-3x d-block mb-2"></i>
+                        Account
+                    </a>
+                    <a href="blank.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="far fa-question-circle fa-3x d-block mb-2"></i>
+                        Help
+                    </a>
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-3">
-                <h1 class="section-title-side"><span>Place order now</span></h1>
+                <h1 class="section-title-side"><span>Blank</span></h1>
             </div>
         </div>
     </section>
