--- a/services.html
+++ b/services.html
@@ -67,16 +67,30 @@
         <div class="row px-3">
             <div class="col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
-                    <a href="dashboad.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Dashboard</a>
-                    <a href="services.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action active">Services</a>
-                    <a href="orders.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Orders</a>
-                    <a href="finance.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Finaice</a>
-                    <a href="account.html"
-                        class="list-group-item text-center py-4 my-3 list-group-item-action">Account</a>
+                    <a href="dashboad.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="far fa-star fa-3x d-block mb-2"></i>
+                        Dashboard
+                    </a>
+                    <a href="services.html" class="list-group-item text-center p-4 my-3 list-group-item-action active">
+                        <i class="fas fa-briefcase fa-3x d-block mb-2"></i>
+                        Services
+                    </a>
+                    <a href="orders.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="fas fa-shopping-cart fa-3x d-block mb-2"></i>
+                        Orders
+                    </a>
+                    <a href="finance.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="fas fa-coins fa-3x d-block mb-2"></i>
+                        Finaice
+                    </a>
+                    <a href="account.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="far fa-address-card fa-3x d-block mb-2"></i>
+                        Account
+                    </a>
+                    <a href="blank.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
+                        <i class="far fa-question-circle fa-3x d-block mb-2"></i>
+                        Help
+                    </a>
                 </div>
             </div>
 
@@ -91,8 +105,8 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html"
-                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="onestepmode.html" class=" btn nz-btn-gold d-block d-md-inline-block">Easy
+                                    Mode</a>
                                 <a href="multistepmode.html"
                                     class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
@@ -105,8 +119,8 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html"
-                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="onestepmode.html" class=" btn nz-btn-gold d-block d-md-inline-block">Easy
+                                    Mode</a>
                                 <a href="multistepmode.html"
                                     class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
@@ -119,8 +133,8 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html"
-                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="onestepmode.html" class=" btn nz-btn-gold d-block d-md-inline-block">Easy
+                                    Mode</a>
                                 <a href="multistepmode.html"
                                     class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
@@ -133,8 +147,8 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html"
-                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="onestepmode.html" class=" btn nz-btn-gold d-block d-md-inline-block">Easy
+                                    Mode</a>
                                 <a href="multistepmode.html"
                                     class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
@@ -147,8 +161,8 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html"
-                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="onestepmode.html" class=" btn nz-btn-gold d-block d-md-inline-block">Easy
+                                    Mode</a>
                                 <a href="multistepmode.html"
                                     class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
@@ -161,8 +175,8 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html"
-                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="onestepmode.html" class=" btn nz-btn-gold d-block d-md-inline-block">Easy
+                                    Mode</a>
                                 <a href="multistepmode.html"
                                     class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
@@ -175,8 +189,8 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html"
-                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="onestepmode.html" class=" btn nz-btn-gold d-block d-md-inline-block">Easy
+                                    Mode</a>
                                 <a href="multistepmode.html"
                                     class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
@@ -189,8 +203,8 @@
                             </div>
                             <div class="card-footer pt-0 bg-white border-0">
 
-                                <a href="onestepmode.html"
-                                    class=" btn nz-btn-gold d-block d-md-inline-block">Easy Mode</a>
+                                <a href="onestepmode.html" class=" btn nz-btn-gold d-block d-md-inline-block">Easy
+                                    Mode</a>
                                 <a href="multistepmode.html"
                                     class=" btn btn-outline-gold d-block d-md-inline-block">Advanced
                                     Mode</a></div>
