Recent Orders UI

--- a/dashboad.html
+++ b/dashboad.html
@@ -142,39 +142,36 @@
                         <h1 class="section-title-side"><span>My Recent orders</span></h1>
                         <div class="recent-odrder-list px-2">
 
-                            <div class="card border-secondary mb-3">
-                                <div
-                                    class="card-header bg-secondary h5 d-flex justify-content-between align-items-baseline">
+                            <div class="order-card card border-secondary mb-3 rounded-lg">
+                                <div class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
                                     <span class="h5">#20545986</span>
-                                    <span class=" badge badge-pill badge-light">Created</span>
+                                    <span class=" badge badge-pill badge-secondary">Created</span>
                                 </div>
-                                <div class="card-body text-dark">
+                                <div class="card-body pt-0 text-dark">
                                     <h5 class="card-title">Translation</h5>
                                     <p class="card-text">Last update: <span class="text-muted">2019-07-28
                                             09:15</span> </p>
                                 </div>
                             </div>
 
-                            <div class="card border-primary mb-3">
-                                <div
-                                    class="card-header bg-primary h5 d-flex justify-content-between align-items-baseline">
+                            <div class="order-card card border-primary mb-3 rounded-lg">
+                                <div class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
                                     <span class="h5">#20545986</span>
-                                    <span class=" badge badge-pill badge-light">Approved</span>
+                                    <span class=" badge badge-pill badge-primary">Approved</span>
                                 </div>
-                                <div class="card-body text-dark">
+                                <div class="card-body pt-0 text-dark">
                                     <h5 class="card-title">Translation</h5>
                                     <p class="card-text">Last update: <span class="text-muted">2019-07-28
                                             09:15</span> </p>
                                 </div>
                             </div>
 
-                            <div class="card border-success mb-3">
-                                <div
-                                    class="card-header bg-success h5 d-flex justify-content-between align-items-baseline">
+                            <div class="order-card card border-success mb-3 rounded-lg">
+                                <div class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
                                     <span class="h5">#20545986</span>
-                                    <span class=" badge badge-pill badge-light">Completed</span>
+                                    <span class=" badge badge-pill badge-success">Completed</span>
                                 </div>
-                                <div class="card-body text-dark">
+                                <div class="card-body pt-0 text-dark">
                                     <h5 class="card-title">Translation</h5>
                                     <p class="card-text">Last update:
                                         <span class="text-muted">2019-07-28 09:15</span>
@@ -182,13 +179,12 @@
                                 </div>
                             </div>
 
-                            <div class="card border-danger mb-3">
-                                <div
-                                    class="card-header bg-danger h5 d-flex justify-content-between align-items-baseline">
+                            <div class="order-card card border-danger mb-3 rounded-lg">
+                                <div class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
                                     <span class="h5">#20545986</span>
-                                    <span class=" badge badge-pill badge-light">Rejected</span>
+                                    <span class=" badge badge-pill badge-danger">Rejected</span>
                                 </div>
-                                <div class="card-body text-dark">
+                                <div class="card-body pt-0 text-dark">
                                     <h5 class="card-title">Translation</h5>
                                     <p class="card-text">Last update: <span class="text-muted">2019-07-28
                                             09:15</span> </p>
