--- a/dashboad.html
+++ b/dashboad.html
@@ -144,7 +144,7 @@
 
                             <div class="order-card card border-secondary mb-3 rounded-lg">
                                 <div class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
-                                    <span class="h5">#20545986</span>
+                                    <span class="h5"><i class="fas fa-chevron-circle-right mr-2"></i>#20545986</span>
                                     <span class=" badge badge-pill badge-secondary">Created</span>
                                 </div>
                                 <div class="card-body pt-0 text-dark">
@@ -156,7 +156,7 @@
 
                             <div class="order-card card border-primary mb-3 rounded-lg">
                                 <div class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
-                                    <span class="h5">#20545986</span>
+                                    <span class="h5"><i class="fas fa-chevron-circle-right mr-2"></i>#20545986</span>
                                     <span class=" badge badge-pill badge-primary">Approved</span>
                                 </div>
                                 <div class="card-body pt-0 text-dark">
@@ -168,7 +168,7 @@
 
                             <div class="order-card card border-success mb-3 rounded-lg">
                                 <div class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
-                                    <span class="h5">#20545986</span>
+                                    <span class="h5"><i class="fas fa-chevron-circle-right mr-2"></i>#20545986</span>
                                     <span class=" badge badge-pill badge-success">Completed</span>
                                 </div>
                                 <div class="card-body pt-0 text-dark">
@@ -181,7 +181,7 @@
 
                             <div class="order-card card border-danger mb-3 rounded-lg">
                                 <div class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
-                                    <span class="h5">#20545986</span>
+                                    <span class="h5"><i class="fas fa-chevron-circle-right mr-2"></i>#20545986</span>
                                     <span class=" badge badge-pill badge-danger">Rejected</span>
                                 </div>
                                 <div class="card-body pt-0 text-dark">
