login to dashboard

--- a/singup.html
+++ b/singup.html
@@ -39,7 +39,8 @@
                         <a class="nav-link text-dark" href="#">Who we are</a>
                     </li>
                     <li class="nav-item mx-3 active">
-                        <a class="nav-link text-dark " href="login.html">login <span class="sr-only">(current)</span></a>
+                        <a class="nav-link text-dark " href="login.html">login <span
+                                class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item mx-3">
                         <a class="nav-link text-dark " href="singup.html"><span class="nz-btn-gold py-0 my-2 px-2">Sign
@@ -118,8 +119,8 @@
                             </div>
                         </div>
                         <div class="form-row">
-                            <button class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal"
-                                type="submit">Register</button>
+                            <a href="dashboad.html"
+                                class="btn btn-block nz-btn-gold btn-lg text-uppercase font-weight-normal">Register</a>
                         </div>
                     </form>
                     <a href="/login.html" class="d-block pt-3 nz-text-gold">I already have account</a>
