--- a/blank.html
+++ b/blank.html
@@ -65,7 +65,7 @@
 
     <section class="section-main py-5 px-2">
         <div class="row">
-            <div class="col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
+            <div class="side-navbar side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
                     <a href="dashboad.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
                         <i class="far fa-star fa-3x d-block mb-2"></i>
