--- a/orders.html
+++ b/orders.html
@@ -65,7 +65,7 @@
 
     <section class="section-main py-5 px-2">
         <div class="row px-3">
-            <div class="col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
+            <div class="side-navbar col-12 col-lg-2 flex-sm-row flex-md-row overflow-auto">
                 <div class="list-group flex-row flex-md-column " id="mainTabs" role="tablist">
                     <a href="dashboad.html" class="list-group-item text-center p-4 my-3 list-group-item-action">
                         <i class="far fa-star fa-3x d-block mb-2"></i>
@@ -95,6 +95,13 @@
             </div>
             <div class="col-12 col-lg-10 shadow py-3">
                 <h1 class="section-title-side"><span>Orders List</span></h1>
+                <ul class="list-group">
+                    <li class="list-group-item ">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Morbi leo risus</li>
+                    <li class="list-group-item">Porta ac consectetur ac</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                </ul>
             </div>
         </div>
     </section>
