--- a/orders.html
+++ b/orders.html
@@ -96,11 +96,11 @@
             <div class="col-12 col-lg-10 shadow py-3">
                 <h1 class="section-title-side"><span>Orders List</span></h1>
                 <ul class="list-group">
-                    <li class="list-group-item ">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Morbi leo risus</li>
-                    <li class="list-group-item">Porta ac consectetur ac</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
+                    <li class="list-group-item order-card my-2 py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center"><span><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></li>
+                    <li class="list-group-item order-card my-2 py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center"><span><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></li>
+                    <li class="list-group-item order-card my-2 py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center"><span><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></li>
+                    <li class="list-group-item order-card my-2 py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center"><span><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></li>
+                    <li class="list-group-item order-card my-2 py-3 d-flex flex-column flex-sm-column flex-md-row justify-content-between align-items-center"><span><i class="fas fa-chevron-circle-right mr-2"></i>#78476347932</span><span class=" badge badge-pill badge-success align-self-end">Completed</span></li>
                 </ul>
             </div>
         </div>
