Multisteps UI fix

--- a/multistepmode.html
+++ b/multistepmode.html
@@ -145,8 +145,8 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="requiredSample-tab" data-toggle="tab" href="#requiredSample"
-                                role="tab" aria-controls="requiredSample" aria-selected="false"><i
-                                    class="d-block fa-2x mb-2 fas fa-clipboard-list"></i>Required<br /> Sample</a>
+                                role="tab" aria-controls="requiredSample" aria-selected="false">
+                                    <i class="d-block fa-2x mb-2 fab fa-firstdraft"></i>Required<br /> Sample</a>
                         </li>
                     </ul>
                     <div class="tab-content mt-3" id="myTabContent">
